// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows user to customize widget subtitle 1`] = `
Array [
  Object {
    "payload": Object {
      "widgetSettings": Object {
        "card": Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 0,
          "enabled": true,
          "hasShadow": true,
        },
        "legend": Object {
          "alignment": "left",
          "enabled": true,
          "layout": "horizontal",
          "position": "top",
        },
        "subtitle": Object {
          "content": "@subtitle",
        },
        "title": Object {
          "content": "",
        },
      },
    },
    "type": "@app/UPDATE_WIDGET_SETTINGS",
  },
]
`;

exports[`allows user to customize widget title 1`] = `
Array [
  Object {
    "payload": Object {
      "widgetSettings": Object {
        "card": Object {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 0,
          "enabled": true,
          "hasShadow": true,
        },
        "legend": Object {
          "alignment": "left",
          "enabled": true,
          "layout": "horizontal",
          "position": "top",
        },
        "subtitle": Object {
          "content": "",
        },
        "title": Object {
          "content": "@title",
        },
      },
    },
    "type": "@app/UPDATE_WIDGET_SETTINGS",
  },
]
`;
